--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,4 +1,94 @@
-h1{
-    color: red;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+html{
+    background-color: #ddd;
+    font-family:  Helvetica, sans-serif;
 }
+
+.container{
+    max-width: 1300px;
+    background-color: white;
+    position: relative;
+    margin: 50px auto;
+    padding: 20px, 50px;
+}
+
+/* header */
+
+.header{
+    text-align: center;
+}
+
+.main-title{
+    font-size: 40px;
+}
+
+.main-paragraph{
+    font-style: italic;
+}
+
+/* primeira imágem */
+.featured-image{
+    text-align: center;
+    margin-top: 30px;
+}
+
+/* Biografia */
+.biography-container{
+    padding: 25px 0;
+    margin: 25px 30px ;
+    border-top: 3px dashed #ddd;
+    border-bottom: 3px dashed #ddd;
+}
+
+.bold{
+    font-weight: bold;
+}
+
+/* Quotes */
+.quotes-container{
+    background-color: #ddd;
+    padding: 30px;
+}
+
+.quotes-container blockquote{
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.quotes-container p{
+    font-style: italic;
+}
+
+/* Curiosidades */
+.curiosities-container{
+    padding: 25px 0;
+    margin: 25px 30px;
+    border-top: 3px dashed #ddd;
+    border-bottom: 3px dashed #ddd;
+}
+
+.curiosities-container li{
+    height: 50px;
+}
+
+/* imagem bold */
+.img-bold{
+    font-weight: bold;
+    text-align: center;
+    display: flex;
+    justify-content: space-around ;
+}
+
+.more-info{
+    padding: 25px 0;
+    margin: 25px 30px ;
+}
+
+footer{
+    text-align: center;
+    color: black;
+    margin: 5px 5px;
+    position: sticky;
+}
+
+
+
