--- a/CSS/style.css
+++ b/CSS/style.css
@@ -37,7 +37,7 @@ body{
 
 /* primeira imágem */
 .featured-image{
-    text-align: justify;
+    text-align: center;
     margin-top: 30px;
 }
 
@@ -125,5 +125,15 @@ footer{
     .container{
         overflow-x: hidden;
         padding: 0;
+    }
+}
+
+@media(max-width: 600px){
+    .quotes-container blockquote{
+        font-size: 20px;
+    }
+
+    .quotes-container p{
+        font-size: 15px;
     }
 }
